# agentic-inferno

./: .gitignore  Cargo.toml  LICENSE  README.md  dist-workspace.toml  install.ps1  install.sh
.github/workflows/: ci.yml
examples/: screenshots.rs
src/: config.rs  error.rs  guards.rs  lib.rs  main.rs  orchestrator.rs  prompts.rs  state.rs
src/app/: event.rs  mod.rs  state.rs
src/providers/: anthropic_cli.rs  mod.rs  openai_compat.rs
src/tui/: export.rs  input.rs  mod.rs  pane.rs  settings.rs  ui.rs
tests/: apology_tests.rs  cli_parse_tests.rs  config_tests.rs  export_tests.rs  guard_tests.rs  orchestrator_tests.rs  provider_http_tests.rs  routing_tests.rs  settings_tests.rs  state_machine_tests.rs  tui_tests.rs
