[package]
name = "agentic-inferno"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = { version = "0.29", default-features = false, features = ["crossterm", "macros"] }
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "process", "sync", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dotenvy = "0.15"
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"

[lib]
name = "agentic_inferno"
path = "src/lib.rs"
